chapter6_operation_management/condition_based_pattern/manifests/client.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: condition-based-serving
  annotations:
    sidecar.istio.io/inject: "true"
    sidecar.istio.io/proxyCPU: "128m"
    sidecar.istio.io/proxyMemory: "128Mi"
    proxy.istio.io/config: "{'concurrency':'16'}"
spec:
  containers:
    - name: client
      image: shibui/ml-system-in-actions:condition_based_pattern_client_0.0.1
      imagePullPolicy: Always
      command:
        - tail
        - -f
        - /dev/null
      resources:
        requests:
          cpu: 200m
          memory: "200Mi"
      volumeMounts:
        - name: client
          mountPath: "/opt/vegeta"
          readOnly: true
  volumes:
    - name: client
      configMap:
        name: client
