chapter6_operation_management/condition_based_pattern/manifests/plant_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant
  namespace: condition-based-serving
  labels:
    app: plant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant
  template:
    metadata:
      labels:
        app: plant
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "128m"
        sidecar.istio.io/proxyMemory: "128Mi"
        proxy.istio.io/config: "{'concurrency':'8'}"
    spec:
      containers:
        - name: plant
          image: shibui/ml-system-in-actions:condition_based_pattern_plant_0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9500
            - containerPort: 9501
          resources:
            limits:
              cpu: 800m
              memory: "500Mi"
            requests:
              cpu: 800m
              memory: "500Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: plant
  namespace: condition-based-serving
  labels:
    app: plant
spec:
  ports:
    - name: grpc
      port: 9500
      protocol: TCP
    - name: rest
      port: 9501
      protocol: TCP
  selector:
    app: plant
